# stunning-rotary-phone

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindSFML.cmake
include/: entity.hpp  main.hpp  physic.hpp  render.hpp  scene.hpp  terrain.hpp
include/physic/: cinematic.hpp  collision.hpp  forces.hpp  gravity.hpp  hitbox.hpp  step.hpp
src/: CMakeLists.txt  entity.cpp  main.cpp  physic.cpp  terrain.cpp
src/physic/: CMakeLists.txt  cinematic.cpp  collision.cpp  forces.cpp  hitbox.cpp  step.cpp
test/: CMakeLists.txt
